--- a/style.css
+++ b/style.css
@@ -5,3 +5,13 @@ body {
     background-attachment: fixed;
     background-size: cover;
    }
+
+.bio-picture {
+    display: block;
+    margin-left: auto;
+    margin-right: auto;
+    width: 50%;
+}
+.container {
+    border: solid black 10px;
+}
