--- a/style.css
+++ b/style.css
@@ -11,6 +11,8 @@ body {
     margin-left: auto;
     margin-right: auto;
     width: 50%;
+    height: 300px;
+    width: 300px;
 }
 .container {
     border: solid black 10px;
