--- a/style.css
+++ b/style.css
@@ -8,11 +8,9 @@ body {
 
 .bio-picture {
     display: block;
-    margin-left: auto;
-    margin-right: auto;
-    width: 50%;
-    height: 300px;
-    width: 300px;
+    height: 25%;
+    width: 25%;
+    float: left;
 }
 .container {
     border: solid black 10px;
