--- a/style.css
+++ b/style.css
@@ -29,3 +29,10 @@ body {
     padding: 20px;
     margin-left: 50px;
 }
+button {
+    padding: 20px;
+    margin: 20px;
+}
+form {
+    font-family: Verdana, Geneva, Tahoma, sans-serif;
+}
