Changed font family for the form on contact.html

--- a/style.css
+++ b/style.css
@@ -34,5 +34,4 @@ button {
     margin: 20px;
 }
 form {
-    font-family: Verdana, Geneva, Tahoma, sans-serif;
-}
+    font-family:'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif;
