Changed font family for body element

--- a/style.css
+++ b/style.css
@@ -4,6 +4,7 @@ body {
     background-repeat: no-repeat;
     background-attachment: fixed;
     background-size: cover;
+    font-family: 'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif;
    }
 
 .bio-picture {
@@ -32,7 +33,7 @@ body {
 button {
     padding: 20px;
     margin: 20px;
-    
+
 }
 form {
     font-family:'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif;
