--- a/style.css
+++ b/style.css
@@ -37,3 +37,4 @@ button {
 }
 form {
     font-family:'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif;
+}
