--- a/style.css
+++ b/style.css
@@ -12,6 +12,7 @@ body {
     height: 250px;
     width: 250px;
     float: left;
+    padding: 20px;
 }
 .container {
     border: solid black 1px;
@@ -37,4 +38,7 @@ button {
 }
 form {
     font-family:'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif;
+}
+.about-me {
+    text-align: center;
 }
