Added social media links and reset sizes of all images

--- a/style.css
+++ b/style.css
@@ -42,3 +42,10 @@ form {
 .about-me {
     text-align: center;
 }
+.col img {
+    width: 350px;
+    height: 350px;
+}
+.social-media img {
+    width: 50px;
+}
