Added a sticky footer

--- a/Assets/style.css
+++ b/Assets/style.css
@@ -47,3 +47,12 @@ form {
 .social-media img {
     width: 50px;
 }
+footer {
+    position: fixed;
+    left: 0;
+    bottom: 0;
+    width: 100%;
+    background-color: slategray;
+    color: white;
+    text-align: center;
+  }
