--- a/Assets/style.css
+++ b/Assets/style.css
@@ -46,13 +46,16 @@ form {
 }
 .social-media img {
     width: 50px;
+    margin: 5px;
+    border: rgb(152, 155, 158) 3px solid;
 }
 footer {
     position: fixed;
     left: 0;
     bottom: 0;
     width: 100%;
-    background-color: slategray;
+    background-color: rgb(152, 155, 158);
     color: white;
     text-align: center;
+    padding: 20px;
   }
